fixed missing background image

--- a/HTML_CSS_Projects/003_Job_Application_Portal/style.css
+++ b/HTML_CSS_Projects/003_Job_Application_Portal/style.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('/images/background.jpeg');
+    background-image: url('/images/background.avif');
     background-color: #2364AA;
     background-repeat: no-repeat;
     background-size: cover;
